# Whale

./: .env.ingest.example  .flake8  .gitignore  AGENTS.md  CLAUDE.md  CODEBUDDY.md  GIT.md  README.md  docker-compose.ingest-dev.yaml  process_tree.py  project_tree.txt  pyproject.toml  requirements.txt  代码质量与注释.md  工程管理.md  测试策略.md
.claude/: project-memory.md  settings.json
.codebuddy/plans/: 重构_Python_代码质量检查_Skill_c3329ef6.md
.codebuddy/rules/: general.md  python-docstrings.md  python-style.md  python-testing.md  python-typing.md  testing-policy.md
.codex/agents/: python_worker.toml
.codex/policies/: README.md  engineering-general.md  python-docstrings.md  python-style.md  python-typing.md  testing-policy.md
.data/ingest/: whale.ingest.db
data/shared/: whale.db
docs/: opcua_iec61850_guide.md
docs/performance/: opcua_profiling.md
docs/scenario1/: prompt001.md  prompt002.md  方案001.md
scripts/: run_ingest_dev.sh
src/whale/: __init__.py  pipeline.py  raw_batch.py  scl_registry.py  whale.db
tests/: TESTING.md  __init__.py  conftest.py
tests/e2e/: conftest.py  helpers.py  test_instrumented_pipeline_report.py  test_opcua_pipeline_from_db_e2e.py  test_opcua_pipeline_redis_streams_e2e.py  test_opcua_pipeline_subscription_e2e.py  test_opcua_to_kafka_pipeline_e2e.py
tests/integration/: test_fleet_from_repository.py  test_fleet_process_runtime.py  test_framework_db_init.py  test_sqlite_config_init.py
tests/stress/: conftest.py  test_ingest_concurrency_stress.py  test_pipeline_from_db_stress.py
tests/unit/: test_config.py  test_fleet_update_selection.py  test_kafka_message_publisher.py  test_opcua_adapter_resolution.py  test_redis_streams_message_publisher.py  test_relational_outbox_message_publisher.py  test_source_acquisition_use_case.py  test_source_reader.py  test_source_runtime_config_repository.py  (+3 more)
tmp/: project_tree_with_descriptions.md
tools/source_lab/native/: CMakeLists.txt  README.md
tools/source_lab/native/open62541/: open62541_client_runner.c
tools/source_lab/opcua/native/: CMakeLists.txt  README.md  open62541_client_reader.c  open62541_source_simulator.c
(+354 files in other folders)
